# linearcalculator

./: .gitignore  pyproject.toml  tox.ini
example/: config.toml
src/linearcalculator/: __init__.py  __main__.py  linear_calculator.py  linearcalculator.py  nn_calculator.py  radial_basis.py  train_nn.py  utils.py
