[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "linearcalcular"
description = "A frontend to calculator linear models with equisolve and rascaline."
#readme = "README.rst"
requires-python = ">=3.8"
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "ase",
    "matplotlib",
    "equisolve @ https://github.com/lab-cosmo/equisolve/archive/main.zip",
    "rascaline @ https://github.com/luthaf/rascaline/archive/equisolve.zip",
    "scikit-learn",
    "tqdm",
]

[project.scripts]
linearcalculator = "linearcalculator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "linearcalculator.__version__"}


[tool.isort]
skip = "__init__.py"
profile = "black"
line_length = 88
indent = 4
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "linearcalculator"
